# tomestone

./: .gitignore  .plan.md  AGENTS.md  Cargo.toml  README.md  README.zh.md  debug_out.txt
.claude/: settings.local.json
docs/: dye-system.md  exd-to-model-pipeline.md  ff14-vertex-format.md  game-data-formats.md  item-sources.md  sqpack-format.md  tech-stack.md
examples/: diagnose_dye.rs  diagnose_housing.rs  diagnose_mask.rs  dump_stm.rs  explore_housing_data.rs  explore_housing_paths.rs  inspect_stm.rs  render_equipment.rs  render_housing.rs  render_housing_types.rs  stm_encoding.rs  verify_housing.rs
src/: app.rs  auto_craft.rs  config.rs  data_dir.rs  domain.rs  dye.rs  fonts.rs  game_data.rs  glamour.rs  glamour_editor.rs  lib.rs  loading.rs  main.rs  mdl_loader.rs  renderer.rs  resource_browser.rs  schema.rs  skeleton.rs  template.rs  tex_loader.rs
src/game/: mdl.rs  mod.rs  sgb.rs  skeleton.rs  tex.rs
src/glamour/: editor.rs  mod.rs
src/ui/components/: dye_palette.rs  equipment_list.rs  item_detail.rs  item_list.rs  mod.rs  progress.rs  template_editor.rs  viewport.rs
src/ui/pages/: browser.rs  crafting.rs  glamour.rs  housing.rs  mod.rs  resource.rs  setup.rs  toolbox.rs
