[package]
name = "tomestone"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui-wgpu = "0.33"
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
physis = { git = "https://github.com/AzurIce/physis.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"

[profile.dev]
overflow-checks = false
