[workspace]
members = ["packages/*"]

[workspace.dependencies]
tomestone-render = { path = "packages/tomestone-render" }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }

[package]
name = "tomestone"
version = "0.1.0"
edition = "2021"

[dependencies]
tomestone-render.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
eframe = { version = "0.33", features = ["wgpu"] }
egui-wgpu = "0.33"
egui_table = "0.6"
physis = { git = "https://github.com/AzurIce/physis.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
serde_yml = "0.0.12"
ureq = "3"
rfd = "0.15"

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"

[profile.dev]
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
